Debug fiture then deleted post still save in state

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hamepage": "https://Sigul4.github.io/React-Redux-MUI-GrapgQl-Thunk-Hipstagram-Project",
+  "homepage": "https://Sigul4.github.io/React-Redux-MUI-GrapgQl-Thunk-Hipstagram-Project",
   "name": "hipstagram",
   "version": "0.1.0",
   "private": true,
